# gamestart

./: .gitignore  CMakeLists.txt  README.md
assets/: tree.mtl
cmake/: Dependencies.cmake
include/: application.h  imguilayer.h  renderer.h  scene.h  scenelayer.h
include/core/: application.h  assetsmanager.h  gamelayer.h  imguilayer.h  inputmanager.h  layer.h
include/entities/: graphicscomponent.h  namecomponent.h  transformcomponent.h
src/: application.android.cpp  application.cpp  application.win32.cpp  imguilayer.cpp  inputmanager.cpp  layer.cpp  main.cpp  renderer.cpp  scene.cpp  scenelayer.cpp  tiny_obj_loader.cpp
src/core/: application.cpp  assetsmanager.cpp  gamelayer.cpp  imguilayer.cpp  inputmanager.cpp  layer.cpp
